--- a/SpringbootProject/QuickSpring/src/main/resources/application.properties
+++ b/SpringbootProject/QuickSpring/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=QuickSpring
+spring.datasource.url=jdbc:postgresql://localhost:5432/demodb
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.jpa.show-sql=true
+spring.datasource.driver-class-name=org.postgresql.Driver
