--- a/SpringbootProject/QuickSpring/src/main/resources/application.properties
+++ b/SpringbootProject/QuickSpring/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=org.postgresql.Driver
+server.port=9091
