--- a/microservice/section_13/message/src/main/resources/application.yml
+++ b/microservice/section_13/message/src/main/resources/application.yml
@@ -9,10 +9,11 @@ spring:
       definition: email|sms
     stream:
       bindings:
-        email|sms-in-0:
+        emailsms-in-0:
           destination: send-communication
           group: ${spring.application.name}
-        
+        emailsms-out-0:
+          destination: communication-sent
   rabbitmq:
     host: localhost
     port: 5672
